--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "azim-portfolio",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://azim2023.github.io/portfolio",
+  "homepage": "https://azim2023.github.io/azim-portfolio",
   "type": "module",
   "scripts": {
     "dev": "vite",
